<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context="com.legend.android_9dz.MainActivity">

    <TextView
        android:id="@+id/table_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textAlignment="textEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textIsSelectable="true"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/but_reset"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:onClick="calcButton"
            android:singleLine="true"
            android:soundEffectsEnabled="true"
            android:text="@string/reset"
            android:textAlignment="gravity"
            android:textAllCaps="true"
            android:textSize="30sp"
            android:textStyle="normal"
            tools:ignore="ButtonStyle,UsingOnClickInXml" />

        <Button
            android:id="@+id/but_copy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="calcButton"
            android:singleLine="false"
            android:soundEffectsEnabled="true"
            android:text="@string/copy"
            android:textAllCaps="true"
            android:textSize="20sp"
            tools:ignore="ButtonStyle,UsingOnClickInXml" />

        <Button
            android:id="@+id/but_multiply"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:onClick="calcButton"
            android:singleLine="true"
            android:soundEffectsEnabled="true"
            android:text="@string/multiply"
            android:textAllCaps="true"
            android:textSize="30sp"
            tools:ignore="ButtonStyle,UsingOnClickInXml" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/but_7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="calcButton"
            android:singleLine="true"
            android:soundEffectsEnabled="true"
            android:text="@string/_7"
            android:textAllCaps="true"
            android:textSize="30sp"
            tools:ignore="ButtonStyle,UsingOnClickInXml" />


        <Button
            android:id="@+id/but_8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="calcButton"
            android:singleLine="true"
            android:soundEffectsEnabled="true"
            android:text="@string/_8"
            android:textAllCaps="true"
            android:textSize="30sp"
            tools:ignore="ButtonStyle,UsingOnClickInXml" />

        <Button
            android:id="@+id/but_9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="calcButton"
            android:singleLine="true"
            android:soundEffectsEnabled="true"
            android:text="@string/_9"
            android:textAllCaps="true"
            android:textSize="30sp"
            tools:ignore="ButtonStyle,UsingOnClickInXml" />

        <Button
            android:id="@+id/but_divide"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="calcButton"
            android:singleLine="true"
            android:soundEffectsEnabled="true"
            android:text="@string/divide"
            android:textAllCaps="true"
            android:textSize="30sp"
            tools:ignore="ButtonStyle,UsingOnClickInXml" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/but_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="calcButton"
            android:singleLine="true"
            android:soundEffectsEnabled="true"
            android:text="@string/_4"
            android:textAllCaps="true"
            android:textSize="30sp"
            tools:ignore="ButtonStyle,UsingOnClickInXml" />


        <Button
            android:id="@+id/but_5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="calcButton"
            android:singleLine="true"
            android:soundEffectsEnabled="true"
            android:text="@string/_5"
            android:textAllCaps="true"
            android:textSize="30sp"
            tools:ignore="ButtonStyle,UsingOnClickInXml" />

        <Button
            android:id="@+id/but_6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="calcButton"
            android:singleLine="true"
            android:soundEffectsEnabled="true"
            android:text="@string/_6"
            android:textAllCaps="true"
            android:textSize="30sp"
            tools:ignore="ButtonStyle,UsingOnClickInXml" />

        <Button
            android:id="@+id/but_subtract"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="calcButton"
            android:singleLine="true"
            android:soundEffectsEnabled="true"
            android:text="@string/subtract"
            android:textAllCaps="true"
            android:textSize="30sp"
            tools:ignore="ButtonStyle,UsingOnClickInXml" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/but_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="calcButton"
            android:singleLine="true"
            android:soundEffectsEnabled="true"
            android:text="@string/_1"
            android:textAllCaps="true"
            android:textSize="30sp"
            tools:ignore="ButtonStyle,UsingOnClickInXml" />

        <Button
            android:id="@+id/but_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="calcButton"
            android:singleLine="true"
            android:soundEffectsEnabled="true"
            android:text="@string/_2"
            android:textAllCaps="true"
            android:textSize="30sp"
            tools:ignore="ButtonStyle,UsingOnClickInXml" />

        <Button
            android:id="@+id/but_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="calcButton"
            android:text="@string/_3"
            android:textSize="30sp"
            tools:ignore="ButtonStyle,UsingOnClickInXml" />

        <Button
            android:id="@+id/but_plus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="calcButton"
            android:singleLine="true"
            android:soundEffectsEnabled="true"
            android:text="@string/plus"
            android:textAllCaps="true"
            android:textSize="30sp"
            tools:ignore="ButtonStyle,UsingOnClickInXml" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/but_comma"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="calcButton"
            android:singleLine="true"
            android:soundEffectsEnabled="true"
            android:text="@string/comma"
            android:textAllCaps="true"
            android:textSize="30sp"
            tools:ignore="ButtonStyle,UsingOnClickInXml" />

        <Button
            android:id="@+id/but_0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="calcButton"
            android:singleLine="true"
            android:soundEffectsEnabled="true"
            android:text="@string/_0"
            android:textAllCaps="true"
            android:textSize="30sp"
            tools:ignore="ButtonStyle,UsingOnClickInXml" />

        <Button
            android:id="@+id/but_delete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="calcButton"
            android:singleLine="true"
            android:soundEffectsEnabled="true"
            android:text="@string/x"
            android:textSize="25sp"
            tools:ignore="ButtonStyle,UsingOnClickInXml" />

        <Button
            android:id="@+id/but_equals"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="calcButton"
            android:singleLine="true"
            android:soundEffectsEnabled="true"
            android:text="@string/equals"
            android:textAllCaps="true"
            android:textSize="30sp"
            tools:ignore="ButtonStyle,UsingOnClickInXml" />
    </TableRow>
</LinearLayout>
